fixed content overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 html {
   font-size: 62.5%;
-  /* background-color: #E5FAF5; */
+  background-color: #E5FAF5;
 }
 
 body{
